# Data_Processor

data_wrangling_app/: .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Procfile  README.md  SUPPORT.md  app.py  app_temp.py  config.py  data_wrangling.db  project_scope.txt  pyproject.toml  requirements.txt  test_app.py  test_model.py
data_wrangling_app/.devcontainer/: devcontainer.json  post-create.sh
data_wrangling_app/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
data_wrangling_app/.github/ISSUE_TEMPLATE/: agent_request.yml  bug_report.yml  config.yml  extension_submission.yml  feature_request.yml  preset_submission.yml
data_wrangling_app/.github/workflows/: RELEASE-PROCESS.md  codeql.yml  docs.yml  lint.yml  release-trigger.yml  release.yml  stale.yml  test.yml
data_wrangling_app/.streamlit/: config.toml
data_wrangling_app/Data_Processor-main/data_wrangling_app/: DEPLOYMENT.md  data_wrangling.db  setup.sh
data_wrangling_app/docs/: installation.md  toc.yml  upgrade.md
data_wrangling_app/extensions/: README.md  RFC-EXTENSION-SYSTEM.md  catalog.community.json
data_wrangling_app/extensions/template/: extension.yml
data_wrangling_app/galaxy_cards/Loader/: Z4drus_orange-rattlesnake-68.html  Z4drus_polite-seahorse-77.html
data_wrangling_app/model_lake/: xgboost_original_20260326_153149.json  xgboost_original_20260326_154008.json  xgboost_original_20260326_154010.json  xgboost_original_20260326_154230.json  xgboost_original_20260326_155551.json  xgboost_original_20260326_161102.json  xgboost_original_20260326_161102.pkl  xgboost_original_20260326_162342.json  xgboost_original_20260326_162349.json  xgboost_original_20260326_162454.json  xgboost_original_20260326_163241.json  xgboost_original_20260326_163241.pkl
data_wrangling_app/newsletters/: 2026-February.md
data_wrangling_app/presets/: ARCHITECTURE.md  PUBLISHING.md  README.md  catalog.community.json  catalog.json
data_wrangling_app/presets/scaffold/: preset.yml
data_wrangling_app/presets/self-test/: preset.yml
data_wrangling_app/spec-kit-main/: .gitignore  README.md
data_wrangling_app/tests/: __init__.py
data_wrangling_app/utils/: custom_ml_wrapper.py  data_processor.py  database.py  ensemble_engine.py  integrated_models.py  ml_finance.py  ml_integration.py  ui_components.py  visualizations.py
data_wrangling_app/xg-boost/: 0001.model  dump.raw.txt  iris.csv  xg_boost_model.py  xgboost_model.pkl
(+26 files in other folders)
